--- a/.github/workflows/dialyzer.yml
+++ b/.github/workflows/dialyzer.yml
@@ -1,7 +1,7 @@
-name: Check Lint
+name: Check Dialyzer
 on: pull_request
 jobs:
-  check_lint:
+  check_dialyzer:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -14,12 +14,12 @@ jobs:
           elixir-version: ${{ matrix.elixir }}
           otp-version: ${{ matrix.otp }}
       - uses: actions/cache@v1
-        id: mix-lint-cache
+        id: mix-dialyzer-cache
         with:
           path: deps
           key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-mix-${{ hashFiles(format('{0}-{1}', github.workspace, '/mix.lock')) }}
       - name: Install Mix Dependencies
-        if: steps.mix-lint-cache.outputs.cache-hit != 'true'
+        if: steps.mix-dialyzer-cache.outputs.cache-hit != 'true'
         run: mix deps.get
-      - name: Check Lint
-        run: mix credo --strict
+      - name: Check Dialyzer
+        run: mix dialyzer
